array.island.Island.scala.error
Erreur de compilation :
Island:4: error: value Lenght is not a member of Array[Int]
  for (i <- 0 to num.Lenght -2) {
                     ^